--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.home-page {
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
+}
+
+img {
+  max-width: 100%;
+}
+
+.posts {
+  max-width: 100%;
+
+}
+
+.navFooter {
+  background-color: #282c34;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-nav {
-  background: hotpink;
+  margin-top: auto;
+  position: sticky;
+  bottom: 0px;
+  font-size: 16px;
 }
