--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,12 +17,15 @@ img {
   background-color: #282c34;
   width: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: space-around;
   color: white;
   margin-top: auto;
   position: sticky;
   bottom: 0px;
   font-size: 16px;
+}
+
+.icons {
+  color: white;
 }
