--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,8 +4,41 @@
   min-height: 100vh;
 }
 
-img {
-  max-width: 100%;
+
+
+.edit_page {
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+}
+
+.form.edit_form.rounded {
+  min-height: 100%;
+}
+
+#delete-profile {
+  position: absolute;
+  bottom: 3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
 .posts {
