--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-.home-page {
+.content-body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -10,22 +10,55 @@ img {
 
 .posts {
   max-width: 100%;
+}
 
+.form input {
+  display: flex;
+  flex-direction: column;
+  background: rgb(255,250,250, .5);
+  border: 2px solid black;
+  border-radius: 20px;
+  padding: 10px;
+  justify-content: center;
+  text-align: center;
+}
+
+.login-page {
+  min-height: 100vh;
+  background-image: url("../public/images/heart.jpeg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: .8;
 }
 
 .navFooter {
-  background-color: #282c34;
+  background-color: white;
   width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
   color: white;
   margin-top: auto;
   position: sticky;
   bottom: 0px;
-  font-size: 16px;
+  border-top: 2px solid grey;
+  min-height: 95px;
+  padding-top: 15px;
+  padding-left: 5px;
 }
 
 .icons {
-  color: white;
+  display: flex;
+  justify-content: space-around;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.logoutBtn button {
+  border: none !important;
+  background: none !important;
+  margin: 0 !important;
+  padding: 0 !important;
 }
