--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,8 +4,6 @@
   min-height: 100vh;
 }
 
-
-
 .edit_page {
   min-height: 100vh;
   display: flex;
@@ -21,24 +19,6 @@
 #delete-profile {
   position: absolute;
   bottom: 3px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
 }
 
 .posts {
@@ -94,4 +74,8 @@
   background: none !important;
   margin: 0 !important;
   padding: 0 !important;
+}
+
+img {
+  width: 100%;
 }
